--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,8 @@
 #password: rootroot#123
 #driver-class-name: com.mysql.cj.jdbc.Driver
 
-spring.datasource.url=jdbc:mysql://localhost:3306/exchange_office_2
+spring.datasource.url=jdbc:mysql://localhost:3306/exchange_office
 spring.datasource.username=root
-spring.datasource.password=rootroot#123
+spring.datasource.password=rootroot
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.open-in-view=false
